--- a/static/css/main.css
+++ b/static/css/main.css
@@ -261,6 +261,12 @@ h6 {
     gap: 10px;
 }
 
+.sidebar-content h1,
+.sidebar-content p,
+.sidebar-content span {
+    filter: drop-shadow(0px 0px 6px var(--accent-tertiary));
+}
+
 .sidebar::before,
 .sidebar::after {
     content: '';
@@ -1316,6 +1322,12 @@ body.dark-mode aside .reflection {
 
 body.dark-mode .book-title {
     color: var(--dark-text-primary);
+}
+
+body.dark-mode .sidebar-content h1,
+body.dark-mode .sidebar-content p,
+body.dark-mode .sidebar-content span {
+    filter: drop-shadow(0px 0px 6px var(--dark-bg-primary));
 }
 
 .button:hover {
